RESOLVED FIXED10752
The inspector should not respond to Make Text Smaller/Bigger commands
https://bugs.webkit.org/show_bug.cgi?id=10752
Summary The inspector should not respond to Make Text Smaller/Bigger commands
mitz
Reported 2006-09-06 04:16:12 PDT
When the Inspector is focused, Safari's View > Make Text Smaller/Bigger commands target it, and the results aren't pretty.
Attachments
First attempt (2.52 KB, patch)
2007-05-19 09:20 PDT, Rob Buis
mjs: review-
Now with testcase (24.40 KB, patch)
2007-07-05 04:10 PDT, Rob Buis
no flags
Slight tweaks (24.21 KB, patch)
2007-07-05 13:29 PDT, Rob Buis
mitz: review+
Rob Buis
Comment 1 2007-05-19 09:20:02 PDT
Created attachment 14627 [details] First attempt This fixes the problem in the inspector, unfortunately no way to autotest I think. Cheers, Rob.
mitz
Comment 2 2007-05-19 11:28:24 PDT
Comment on attachment 14627 [details] First attempt Is it possible to make a layout test for this part? - if (type != CSSPrimitiveValue::CSS_EMS && type != CSSPrimitiveValue::CSS_EXS && view && view->frame()) { + if (type != CSSPrimitiveValue::CSS_EMS && type != CSSPrimitiveValue::CSS_EXS && style->textSizeAdjust() && view && view->frame()) {
Maciej Stachowiak
Comment 3 2007-05-29 01:06:45 PDT
Comment on attachment 14627 [details] First attempt I think Mitz is right that the change for handling of -webkit-text-size-adjust can be tested, even if not in the inspector. Please add a test case.
Timothy Hatcher
Comment 4 2007-06-26 05:44:43 PDT
Ideally the inspector should work with text zoom.
Rob Buis
Comment 5 2007-07-05 04:10:11 PDT
Created attachment 15398 [details] Now with testcase This time there is a testcase, since I can now also zoom in/out, bug 14209 patch is also in this patch. Cheers, Rob.
Rob Buis
Comment 6 2007-07-05 13:29:54 PDT
Created attachment 15405 [details] Slight tweaks The testcase contained some garbage and was in the wrong dir, this patch fixes that. Cheers, Rob.
mitz
Comment 7 2007-07-08 04:56:01 PDT
Comment on attachment 15405 [details] Slight tweaks r=me
Rob Buis
Comment 8 2007-07-12 00:51:44 PDT
Landed in r24097.
Matt Lilek
Comment 9 2007-07-12 01:04:05 PDT
See bug 14588 for followup
Note You need to log in before you can comment on or make changes to this bug.