        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=10752
        The inspector should not respond to Make Text Smaller/Bigger commands

        Use the -webkit-text-size-adjust property to ignore text sizing
        and do not take the zoom factor into account for line height when
        -webkit-text-size-adjust is set to none.



Canonical link: https://commits.webkit.org/18835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24097 268f45cc-cd09-0410-ab3c-d52691b4dbfc